<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Clear for Action Lite</string>
    <string name="title_map">Map</string>
    <string name="title_menu">Menu</string>
    <string name="title_boats">Boats</string>
    <string name="plot_button">Plot</string>
    <string name="cancel_button">Cancel</string>
    <string name="hold_button">Cargo</string>
    <string name="jobs_jobs">Jobs</string>
    <string name="empty">Empty</string>
    <string name="jobs_cargo">Cargo</string>
    <string name="jobs_storage">Storage</string>
    <string name="swipe">Swipe</string>
    <string name="type">Type:</string>
    <string name="clazz">Class:</string>
    <string name="cost">Cost:</string>
    <string name="size">Size:</string>
    <string name="upgrade">Upgrade</string>
    <string name="buy">Buy</string>
    <string name="tool_tip">Select town where boat will be built</string>
    <string name="moor">+ Buy Mooring</string>
    <string name="emptyslot">Empty Slot</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="rank">Rank</string>
    <string name="expandNo">You do not have enough silver to purchase this boat slot</string>
    <string name="expandYes1">Buy extra boat slot for </string>
    <string name="expandYes2"> silver</string>
    <string name="marketEmpty">The market is currently out of stock.</string>
    <string name="totalxp">Total XP:</string>
    <string name="nextLevel">Next Level:</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="build">Build</string>
    <string name="range">Range:</string>
    <string name="speed">Speed:</string>
    <string name="cargosize">Cargo Size:</string>
    <string name="harboursize">Harbour Size:</string>
    <string name="market">Market</string>
    <string name="noboatslots">You do not have enough boat slots. Purchase more space from the boat menu.</string>
    <string name="statistics">Statistics</string>
    <string name="statlevel">Level:</string>
    <string name="stattotalexp">Total Experience:</string>
    <string name="statexptonl">Experience to Nevt Level:</string>
    <string name="statgold">Gold:</string>
    <string name="statsilver">Silver:</string>
    <string name="statfleetsize">Fleet Size:</string>
    <string name="statfleetretired">Fleet Retired:</string>
    <string name="statnetworth">Net Worth:</string>
    <string name="statspm">Silver Per Minute:</string>
    <string name="stattotalvoyages">Total Voyages:</string>
    <string name="statdistancesailed">Distance Sailed:</string>
    <string name="statboatte">Boat: Top Earning:</string>
    <string name="statboatspm">Boat: Silver Per Mile:</string>
    <string name="statboatmv">Boat: Most Voyages:</string>
    <string name="statboatmm">Boat: Most Mileage:</string>
    <string name="stattownmf">Town: Most Frequented:</string>
    <string name="stattownmgs">Town: Most Goods Sold:</string>
    <string name="stattownmgb">Town: Most Goods Bought:</string>
    <string name="mooredAt">Moored at
        <xliff:g id="town" example="Sydney">%s</xliff:g>
    </string>
    <string name="sailingTo">Sailing to
        <xliff:g id="town" example="Sydney">%s</xliff:g>
    </string>
    <string name="rangeLabel">
        <xliff:g id="range" example="10">%s</xliff:g>
        miles
    </string>
    <string name="speedLabel">
        <xliff:g id="speed" example="10">%s</xliff:g>
        knots
    </string>
    <string name="partsLabel">%d/%d
    </string>
    <string name="notifBoatArrivedTitle"><xliff:g id="boat" example="Boat">%s</xliff:g>has arrived
    </string>
    <string name="notifBoatArrivedDescription">A boat has arrived and is ready for new orders</string>
    <string name="boatArriveChannelName">Boat Arrivals</string>
    <string name="boatArriveChannelDesc">Notify me when boat arrive in port</string>
    <string name="channelId">arrivalsChannel</string>
    <string name="silverDesc">Silver coin</string>
    <string name="goldDesc">Gold coin</string>
    <string name="rankDesc">Rank coin</string>
    <string name="levelUpTitle">"Level Up"</string>
    <string name="marketNotification">NEW STOCK AVAILABLE AT THE MARKET</string>
    <string name="jobsNotification">NEW JOBS ARE AVAILABLE</string>
    <string name="levelUpMessage">"Newer boats are available for you to build. Shipyard and market have been updated."
    </string>
    <string name="newStock">New stock available</string>
    <string name="newStockTimer">New stock in <xliff:g id="mins" example="1">%d</xliff:g>.<xliff:g id="secs"
                                                                                                   example="1">%s
    </xliff:g> minutes
    </string>
</resources>
