<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent" android:id="@+id/mapcontainer">
    <com.lanyard.pirateerlite.views.MapView
            android:layout_width="0dp"
            android:layout_height="0dp" android:id="@+id/mapView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:background="#00b6c5"/>
    <com.lanyard.pirateerlite.views.MapScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:fillViewport="true" android:id="@+id/vscrollview"
            app:isFillViewport="true">
        <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mapframe" android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:scrollbarAlwaysDrawVerticalTrack="true">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/buttonlayout"
                    android:focusable="auto" android:focusableInTouchMode="true"/>
        </FrameLayout>
    </com.lanyard.pirateerlite.views.MapScrollView>
    <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/cancelButton" android:background="@drawable/cancel_plot_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/cancel_button"
            android:visibility="invisible"/>
    <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/plotButton" android:background="@drawable/plot_icon"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent" android:visibility="invisible"
            android:contentDescription="@string/plot_button"/>
    <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/holdButton" android:background="@drawable/hold_icon"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/hold_button" android:visibility="invisible"/>
    <TextView
            android:text="@string/tool_tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/toolTip" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/tool_tip_bg" android:gravity="center" android:padding="5dp"
            android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>