<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
>


    <TextView
            android:text="TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/townName" android:textSize="36sp"
            android:textStyle="bold" android:textColor="@android:color/black" android:padding="8dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="0.9" android:padding="4dp">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1">

            <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:cardCornerRadius="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            >
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/townPortrait" android:layout_gravity="center" android:adjustViewBounds="true"/>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1" android:paddingTop="8dp"
                android:paddingBottom="8dp" android:paddingRight="8dp" android:paddingLeft="4dp">

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_vertical"
                    android:padding="4dp">
                <TextView
                        android:text="@string/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView13" android:layout_weight="1"/>
                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/typeLabel" android:layout_weight="1"
                        android:gravity="right"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_vertical"
                    android:padding="4dp">
                <TextView
                        android:text="@string/clazz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/totalxp" android:layout_weight="1"/>
                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/classLabel" android:layout_weight="1"
                        android:gravity="right"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_vertical"
                    android:padding="4dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"
                        android:text="@string/size"/>
                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/sizeLabel" android:layout_weight="1"
                        android:gravity="right"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1" android:gravity="center_vertical"
                    android:padding="4dp">
                <TextView
                        android:text="@string/cost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView7" android:layout_weight="1"/>
                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/costLabel" android:layout_weight="1"
                        android:gravity="right"/>
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" app:srcCompat="@drawable/silver_piece"
                        android:id="@+id/imageView6"/>
            </LinearLayout>
            <Button
                    android:text="@string/upgrade"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/upgradeButton" android:layout_weight="0.8"
            />
        </LinearLayout>
    </LinearLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="1">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/description" android:padding="8dp"/>
        </LinearLayout>
    </ScrollView>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="1">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:padding="8dp" android:id="@+id/boatList"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>